2024-09-15 Konstantin Kushnir <chpock@gmail.com>
	* Fix a bug with opening local files when their path starts as a VFS mount
	point
	* Equalize error messages for decryption failures, as different error
	messages led to flaky test
	* Fix 'glob' on mounted volumes like 'mount:/'

2024-09-14 Konstantin Kushnir <chpock@gmail.com>
	* Fix -eofchar issue on Windows and Tcl 9.0b3

2024-09-09 Konstantin Kushnir <chpock@gmail.com>
	* Fix compatibility with Tcl 9.0b3

2024-09-07 Konstantin Kushnir <chpock@gmail.com>
	* Refactor threads tests to make them more reliable
	* Fix possible deadlock

2024-08-23 Konstantin Kushnir <chpock@gmail.com>
	* Fix a bug where mounting an archive with an invalid password in
	read-write mode did not return an error

2024-08-05 Konstantin Kushnir <chpock@gmail.com>
	* Fix build on Windows (MINGW64) with internal debugging enabled
	* Add tests for gethead/getheadmd5/gettail/gettailmd5
	* Fix gethead/gettail on memory mapped files
	* Fix memleaks for getheadmd5/gettailmd5

2024-08-04 Konstantin Kushnir <chpock@gmail.com>
	* Use memory-mapped file for readonly mounts

2024-08-03 Konstantin Kushnir <chpock@gmail.com>
	* Fix build on Windows 32-bit with Tcl9

2024-07-29 Konstantin Kushnir <chpock@gmail.com>
	* Fix build error in some environments when brotli is enabled

2024-07-27 Konstantin Kushnir <chpock@gmail.com>
	* Fix the build for Tcl9 and with --enable-internal-debug

2024-07-27 Konstantin Kushnir <chpock@gmail.com>
	* Bumped version to 1.9.0

2024-07-27 Konstantin Kushnir <chpock@gmail.com>
	* RELEASE TAG 1.8.0

2024-07-26 Konstantin Kushnir <chpock@gmail.com>
	* Add C API for mounting cookfs with parameters

2024-07-25 Konstantin Kushnir <chpock@gmail.com>
	* Add support for encryption
	* Add MD5 validation for pgindex/fsindex data
	* Add MD5 validation for pages
	* Add CI configuration with --disable-c-crypto

2024-07-20 Konstantin Kushnir <chpock@gmail.com>
	* Refactor storage format

2024-07-08 Konstantin Kushnir <chpock@gmail.com>