@@ -4,6 +4,7 @@
 	* Equalize error messages for decryption failures, as different error
 	messages led to flaky test
 	* Fix 'glob' on mounted volumes like 'mount:/'
+	* Improve thread stability by fixing possible double frees
 
 2024-09-14 Konstantin Kushnir <chpock@gmail.com>
 	* Fix -eofchar issue on Windows and Tcl 9.0b3
